--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
     "electron-prebuilt": "^0.24.0",
     "glob": "^5.0.5",
     "gulp": "^3.8.11",
+    "gulp-clean-ts-extends": "0.1.1",
+    "gulp-concat": "2.5.2",
     "gulp-git": "^1.2.1",
+    "gulp-if": "1.2.5",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.7.6",
+    "gulp-uglify": "1.2.0",
     "http-proxy": "^1.11.1",
     "merge2": "^0.3.5"
   },
