--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gulp-typescript": "^2.7.6",
     "gulp-uglify": "1.2.0",
     "http-proxy": "^1.11.1",
-    "merge2": "^0.3.5"
+    "merge2": "^0.3.5",
+    "run-sequence": "1.1.0"
   },
   "name": "nsplode",
   "version": "1.0.0",
